# lightscale-client

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: portability.yml
packaging/linux/: build-packages.sh  install-lightscale-client.sh  smoke-package-install.sh
packaging/openwrt/: build-openwrt-package.sh  smoke-openwrt-package.sh
src/: config.rs  control.rs  data_plane.rs  dns_server.rs  firewall.rs  keys.rs  l2_relay.rs  main.rs  model.rs  netlink.rs  platform.rs  relay_tunnel.rs  resource_guard.rs  router.rs  routes.rs  state.rs  stream_relay.rs  stun.rs  turn.rs  udp_relay.rs  wg.rs  wg_portable.rs
